# batterseye

./: README.md  pyproject.toml
batterseye/: __init__.py  neighbors.py  utils.py
batterseye/data/: __init__.py  dataset.py  generator.py  utils.py
batterseye/models/: __init__.py  embedding.py  loss.py  siamese.py  utils.py
batterseye/scraper/: __init__.py  images.py  matchups.py  utils.py  video.py
data/: matchups.csv
scripts/: build_dataset.py  evaluate_classifier.py  train_model.py
